--- a/Mart.css
+++ b/Mart.css
@@ -291,7 +291,7 @@ h6 {
   margin-top: 3vw;
   display: flex;
   height: 25vw;
-  background-image: url(image/green\ back.png);
+  background-image: url(image/green back.png);
   justify-content: center;
   align-items: center;
   background-size: cover;
